# surgeguard_sc

./: README.md  README_build
apps/: README
apps/hotelReservation/: .cluster-search-fin.sh.swp  Dockerfile-proto  Makefile  config.json  docker-compose.yml  grpc-build.yml
apps/hotelReservation/cmd/frontend/: main.go
apps/hotelReservation/cmd/geo/: db.go  main.go
apps/hotelReservation/cmd/profile/: main.go
apps/hotelReservation/cmd/rate/: main.go
apps/hotelReservation/cmd/recommendation/: main.go
apps/hotelReservation/cmd/reservation/: main.go
apps/hotelReservation/cmd/search/: main.go
apps/hotelReservation/cmd/user/: main.go
apps/hotelReservation/dialer/: dialer.go
apps/hotelReservation/exp_wrk2_scripts/: recommend.lua  search.lua
apps/hotelReservation/protogen/: build.sh
apps/hotelReservation/services/frontend/: server.go
apps/hotelReservation/services/geo/: server.go
apps/hotelReservation/services/profile/: server.go
apps/mediaMicroservices/: Dockerfile  docker-compose.yml  media_service.thrift
apps/mediaMicroservices/gen-lua/: media_service_MovieInfoService.lua  media_service_MovieReviewService.lua  media_service_PlotService.lua  media_service_TextService.lua  media_service_UniqueIdService.lua  media_service_UserService.lua  media_service_ttypes.lua
apps/mediaMicroservices/thrift-build/: Dockerfile  build.sh  thrift-build.yml
apps/socialNetwork/: Dockerfile  compose-post-all.py  docker-compose-single.yml  docker-compose-swarm.yml  docker-compose.yml  docker-nginx.yml  run_exp.sh  social_network.thrift
apps/socialNetwork/exp_wrk2_scripts/: compose-post.lua  mixed-workload.lua  read-home-timeline.lua  read-user-timeline.lua
apps/socialNetwork/gen-cpp/: ComposePostService.h  HomeTimelineService.cpp  HomeTimelineService.h  MediaService_server.skeleton.cpp  PostStorageService.cpp  SocialGraphService.cpp  TextService.cpp  UniqueIdService.h  UserService_server.skeleton.cpp
apps/socialNetwork/gen-lua/: social_network_HomeTimelineService.lua  social_network_UniqueIdService.lua  social_network_UserService.lua  social_network_UserTimelineService.lua
apps/socialNetwork/scripts/: compose-post-all.py
apps/socialNetwork/src/: tracing.h
apps/socialNetwork/thrift-build/: Dockerfile  build.sh
apps/ubench_chain5/: Dockerfile  docker-compose.yml  nginx.yml  social_network.thrift
apps/ubench_chain5/config/: service-config.json
apps/ubench_chain5/controllers/: .slackcontroller.cpp.swp  both  caladan  caladan_freq  change_freq.h  controller_both_sens.cpp  controller_caladan.cpp  controller_caladan_freq.cpp  controller_caladan_noht.cpp  controller_core_bpf.cpp  controller_freq.cpp  controller_freq_new.cpp  controller_parties_correct.cpp  freq  ht  kmod_interact.h  parties  read_stats  read_stats.cpp  slack  slack2  slack3  slackcontroller.cpp  slackcontroller_new.cpp  slackcontroller_newv2.cpp  slackcontroller_sens_new.cpp
apps/ubench_chain5/exp_wrk2_scripts/: ping.lua
apps/ubench_chain5/gen-cpp/: Ping1Service.h  Ping2Service.cpp  Ping4Service.cpp  Ping4Service_server.skeleton.cpp  Ping5Service.cpp  Ping5Service.h  Ping5Service_server.skeleton.cpp  PingService.cpp  PingService_server.skeleton.cpp  PongService.cpp  social_network_types.cpp  social_network_types.h
apps/ubench_chain5/gen-lua/: social_network_Ping1Service.lua  social_network_Ping4Service.lua  social_network_PingService.lua  social_network_ttypes.lua
apps/ubench_chain5/src/: CMakeLists.txt  ClientPool.h
apps/ubench_chain5/src/Ping0Service/: CMakeLists.txt  Ping0Handler.h  Ping0Service.cpp
apps/ubench_chain5/src/Ping1Service/: CMakeLists.txt  Ping1Handler.h  Ping1Service.cpp
apps/ubench_chain5/src/Ping2Service/: CMakeLists.txt  Ping2Handler.h  Ping2Service.cpp
apps/ubench_chain5/src/Ping3Service/: CMakeLists.txt  Ping3Handler.h  Ping3Service.cpp
apps/ubench_chain5/src/Ping4Service/: CMakeLists.txt  Ping4Handler.h  Ping4Service.cpp
apps/ubench_chain5/src/Ping5Service/: CMakeLists.txt  Ping5Handler.h  Ping5Service.cpp
apps/ubench_chain5/thrift-build/: build.sh  thrift-build.yml
controllers/: README  controller_caladan.cpp  controller_escalator.cpp  controller_parties.cpp  sample_config  set_service_targets.cpp
wrk2_spike/: README.md
wrk2_spike/src/: wrk.c  wrk.h
(+171 files in other folders)
